# DeepSynth

./: .agent_handoff.md  .agent_log.md  .agent_status.json  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG_SKILLS.md  CLAUDE.md  CODE_REVIEW_FINAL_REPORT.md  COMPLETION_REPORT.md  DATASET.md  DELIVERY_SUMMARY.md  DOCKER_UI_README.md  Dockerfile  Dockerfile.cpu  ENHANCED_UI_GUIDE.md  EVALUATION_GUIDE.md  IMAGE_PIPELINE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTRUCTION_PROMPTING_NEXT_FEATURES.md  INSTRUCTION_PROMPTING_QUICKSTART.md  Makefile  PHASES_A_C_COMPLETE.md  PHASE_2_COMPLETE.md  PRODUCTION_GUIDE.md  QUICKSTART.md  README.md  README_IMPROVEMENTS.md  README_INSTALL.md  SOUL_README.md  THE_CREATION_OF_SOUL.md  UI_IMPROVEMENTS.md  UPLOAD_STRUCTURE_FIX.md  VERIFICATION_REPORT.md  check_hf_dataset.py  cleanup_huggingface_datasets.py  (+53 more)
apps/: __init__.py
data/: __init__.py  dataset_loader.py  prepare_and_publish.py  prepare_datasets.py  publish_hf_datasets.py  text_to_image.py
deepsynth/: __init__.py  efficient_incremental_uploader.py
deploy/: DOCKER_UPDATES.md  Dockerfile  Dockerfile.cpu  README_LORA.md  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh  start-all.sh  start-dataset-generation.sh  start-gpu-lora.sh  start-model-training.sh  start_docker_ui.sh
docker/: .dockerignore  deepseek-ocr.Dockerfile  docker-compose.yml
docs/: .agent_handoff.md  .agent_log.md  CLAUDE.md  CLOUD_WORKFLOW_GUIDE.md  CODE_REVIEW_REPORT.md  DATASET.md  (+57 more)
(+299 files in other folders)
